--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>भुईकोट</title>
+    <title>चाकणचा किल्ला
+</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="bootstrap.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -16,15 +17,15 @@
         <div class="row text-center py-4 d-block " id="hmarathi"><h1 class="m-auto" style="color: #eabf80 !
         ;color: #eabf80;
     font-weight: bold;
-    text-shadow: 2px 5px 4px black;">भुईकोट</h1></div>
+    text-shadow: 2px 5px 4px black;">चाकणचा किल्ला</h1></div>
         <div class="row text-center py-4 d-none " id="hhindi"><h1 class="m-auto d-block" style="color: #eabf80 !
           ;color: #eabf80;
     font-weight: bold;
-    text-shadow: 2px 5px 4px black;">भुईकोट</h1></div>
+    text-shadow: 2px 5px 4px black;">चाकणचा किल्ला</h1></div>
           <div class="row text-center py-4 d-none " id="henglish"><h1 class="m-auto d-block" style="color: #eabf80 !
             ;color: #eabf80;
     font-weight: bold;
-    text-shadow: 2px 5px 4px black;">Bankot</h1></div>
+    text-shadow: 2px 5px 4px black;">Chakan Fort</h1></div>
           <div class="d-block" id="marathi1">
             <div class="row px-2">
               <div class="col-6">
