--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>चाकणचा किल्ला
+    <title>संग्रामदुर्ग
 </title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="bootstrap.css">
@@ -17,15 +17,17 @@
         <div class="row text-center py-4 d-block " id="hmarathi"><h1 class="m-auto" style="color: #eabf80 !
         ;color: #eabf80;
     font-weight: bold;
-    text-shadow: 2px 5px 4px black;">चाकणचा किल्ला</h1></div>
+    text-shadow: 2px 5px 4px black;">संग्रामदुर्ग
+</h1></div>
         <div class="row text-center py-4 d-none " id="hhindi"><h1 class="m-auto d-block" style="color: #eabf80 !
           ;color: #eabf80;
     font-weight: bold;
-    text-shadow: 2px 5px 4px black;">चाकणचा किल्ला</h1></div>
+    text-shadow: 2px 5px 4px black;">संग्रामदुर्ग
+</h1></div>
           <div class="row text-center py-4 d-none " id="henglish"><h1 class="m-auto d-block" style="color: #eabf80 !
             ;color: #eabf80;
     font-weight: bold;
-    text-shadow: 2px 5px 4px black;">Chakan Fort</h1></div>
+    text-shadow: 2px 5px 4px black;">Sangram Durg</h1></div>
           <div class="d-block" id="marathi1">
             <div class="row px-2">
               <div class="col-6">
@@ -101,11 +103,12 @@
 
                 </p>
                 <p class="d-none" id = "english" style="color:#FFCF87;  text-shadow: -1px 2px 3px black!important;    font-size: 1.1rem !important;
-                font-weight: bolder;">Bhuikot Fort is an ancient fort of Chakan. Shivaji Raja's great-grandfather (Babaji), father Maloji and Khiloji were given Jahagiri of Chakan Chaurya by Subhedar Amirsha of Daulatabad. Later, the Chakan province was under the Jahagiri of Shahaji Raja. Shivaji Maharaj conquered this fort from Adil Shah, at that time Firangoji Narsala was the fort chief. He expressed his loyalty to the kings and was appointed by the kings as their fort guard.
+                font-weight: bolder;">Sangram Durg Fort is an ancient fort of Chakan. Shivaji Raja's great-grandfather (Babaji), father Maloji and Khiloji were given Jahagiri of Chakan Chaurya by Subhedar Amirsha of Daulatabad. Later, the Chakan province was under the Jahagiri of Shahaji Raja. Shivaji Maharaj conquered this fort from Adil Shah, at that time Firangoji Narsala was the fort chief. He expressed his loyalty to the kings and was appointed by the kings as their fort guard.
 
 On June 21, 1660, Shahistekhan's 20,000 troops besieged Bhuikot in Chakan. At that time, the fort</p>
                   <p class="d-none" id = "hindi" style="color:#FFCF87;  text-shadow: -1px 2px 3px black!important;    font-size: 1.1rem !important;
-                  font-weight: bolder;">भुईकोट किला चाकन का एक प्राचीन किला है। शिवाजी राजा के परदादा (बाबाजी), पिता मालोजी और खिलोजी को दौलताबाद के सूबेदार अमीरशा ने चाकन चौर्य की जहांगिरी दी थी। बाद में, चाकन प्रांत शाहजी राजा के जहाँगीरी के अधीन था। शिवाजी महाराज ने इस किले को आदिल शाह से जीत लिया था, उस समय फिरंगोजी नरसाला किले के प्रमुख थे। उसने राजाओं के प्रति अपनी निष्ठा व्यक्त की और राजाओं द्वारा उन्हें किले के रक्षक के रूप में नियुक्त किया गया।
+                  font-weight: bolder;">संग्रामदुर्ग
+ किला चाकन का एक प्राचीन किला है। शिवाजी राजा के परदादा (बाबाजी), पिता मालोजी और खिलोजी को दौलताबाद के सूबेदार अमीरशा ने चाकन चौर्य की जहांगिरी दी थी। बाद में, चाकन प्रांत शाहजी राजा के जहाँगीरी के अधीन था। शिवाजी महाराज ने इस किले को आदिल शाह से जीत लिया था, उस समय फिरंगोजी नरसाला किले के प्रमुख थे। उसने राजाओं के प्रति अपनी निष्ठा व्यक्त की और राजाओं द्वारा उन्हें किले के रक्षक के रूप में नियुक्त किया गया।
 
 21 जून, 1660 को, शाहिस्तेखान के 20,000 सैनिकों ने चाकन में भुइकोट को घेर लिया। उस समय किला
 </p>
